@@ -3,19 +3,15 @@
 <plist version="1.0">
 <dict>
 	<key>IBDocumentLocation</key>
-	<string>46 15 492 320 0 0 1024 746 </string>
+	<string>82 159 492 320 0 0 1024 746 </string>
 	<key>IBEditorPositions</key>
 	<dict>
 		<key>29</key>
-		<string>79 658 251 44 0 0 1024 746 </string>
+		<string>136 288 261 44 0 0 1024 746 </string>
 	</dict>
 	<key>IBFramework Version</key>
-	<string>364.0</string>
-	<key>IBOpenObjects</key>
-	<array>
-		<integer>29</integer>
-	</array>
+	<string>446.1</string>
 	<key>IBSystem Version</key>
-	<string>7R28</string>
+	<string>8P2137</string>
 </dict>
 </plist>
