@@ -1,3 +1,12 @@
+June 10, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * libpcsxcore/plugins.c: Don't add "_" to function name for Mac OS X.
+ * macosx/Info.plist: Modified software information.
+ * macosx/English.lproj/InfoPlist.strings: Likewise.
+ * macosx/Pcsx.xcodeproj/project.pbxproj: Tweaked parameter.
+ * macosx/English.lproj/PCSX.nib/objects.nib: Removed Edit menu.
+ * macosx/English.lproj/PCSX.nib/info.nib: Likewise.
+
 June 9, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * macosx/*: Added preliminary Mac OS X port. Code copied from PCSX Mac
